<?xml version="1.0"?>
<package format="2">
    <name>hero_chassis_controller</name>
    <version>0.1.0</version>
    <description>hero_chassis_controller.</description>
    <maintainer email="2874257768@qq.com">Aoalas</maintainer>
    <license>BSD</license>
    <author email="2874257768@qq.com">Aoalas</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <build_depend>boost</build_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>eigen</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <build_depend>roslint</build_depend>
</package>
